fixed invisible occlusion by scaling to 0

--- a/src/styles/mainMenu.scss
+++ b/src/styles/mainMenu.scss
@@ -57,10 +57,12 @@
     bottom: 2.5vh;
     transition: 0.1s;
 
+    transform: scale(0);
     opacity: 0;
 
     &.visible {
-      opacity: 1;
+        transform: scale(1);
+        opacity: 1;
     }
 
     box-shadow: 0 0 20px black;
